<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>former_hardware</name>
  <version>0.2.1</version>
  <description>
    The package for Former hardware interface
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend> 

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>roas_base</depend>
  <depend>former_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>