cmake_minimum_required(VERSION 3.5)
project(former_patrol)


find_package(ament_cmake REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)


# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()


add_executable(patrol_action src/patrol_action.cpp)
ament_target_dependencies(patrol_action
    nav2_msgs
    rclcpp
    rclcpp_action
)

install(TARGETS patrol_action
    DESTINATION lib/${PROJECT_NAME}
)

ament_export_dependencies(
    rclcpp
    nav2_msgs
    rclcpp_action
)







#find_package(nav2_common REQUIRED)
#find_package(navigation2 REQUIRED)

#nav2_package()





if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
