<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>former_ros2</name>
  <version>0.2.1</version>
  <description> 
    The meta package for Former 
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>former_base</exec_depend>
  <exec_depend>former_description</exec_depend>
  <exec_depend>former_hardware</exec_depend>
  <exec_depend>former_msgs</exec_depend>
  <exec_depend>former_navigation2</exec_depend>
  <exec_depend>former_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>