<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>former_teleop</name>
  <version>0.2.1</version>
  <description>
    The package for teleoperation
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer> 
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend> 

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>